{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 46,
  "lineage": "c79f635f-0185-43e5-12af-038550871adb",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:security-group/sg-08c9256bd70f046ae",
            "description": "Security Group for Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c9256bd70f046ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Inbound HTTPS Traffic to Control Plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow Control Plane to receive inbound traffic from Worker Nodes",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8309b050038f6ff"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "736750855543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-worker-node-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:security-group/sg-0b8309b050038f6ff",
            "description": "Security Group for Worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8309b050038f6ff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to receive inbound traffic from control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c9256bd70f046ae"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-worker-node-sg",
            "name_prefix": "",
            "owner_id": "736750855543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-node-sg",
              "kubernetes.io/cluster/eks-cluster-deployment-cluster": "owned"
            },
            "tags_all": {
              "Name": "eks-worker-node-sg",
              "kubernetes.io/cluster/eks-cluster-deployment-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-cluster-ingress-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Inbound HTTPS Traffic to Control Plane",
            "from_port": 443,
            "id": "sgrule-1402029542",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08c9256bd70f046ae",
            "security_group_rule_id": "sgr-072254a87a2c96b68",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.eks-cluster-sg",
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to receive inbound traffic from control plane",
            "from_port": 1025,
            "id": "sgrule-1921543513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b8309b050038f6ff",
            "security_group_rule_id": "sgr-0521a3783a3569e01",
            "self": false,
            "source_security_group_id": "sg-08c9256bd70f046ae",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.eks-cluster-sg",
            "module.cluster.aws_security_group.eks-worker-node-sg",
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Control Plane to receive inbound traffic from Worker Nodes",
            "from_port": 443,
            "id": "sgrule-250099815",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08c9256bd70f046ae",
            "security_group_rule_id": "sgr-0020b363e1cb0e6c6",
            "self": false,
            "source_security_group_id": "sg-0b8309b050038f6ff",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.eks-cluster-sg",
            "module.cluster.aws_security_group.eks-worker-node-sg",
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1086169785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b8309b050038f6ff",
            "security_group_rule_id": "sgr-059e1e79006d803ae",
            "self": false,
            "source_security_group_id": "sg-0b8309b050038f6ff",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.eks-worker-node-sg",
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0240b4817dc5e121d",
            "association_id": "eipassoc-0d6a21543954bc9eb",
            "domain": "vpc",
            "id": "eipalloc-0240b4817dc5e121d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0ffb5e90bdb31a398",
            "private_dns": "ip-10-123-10-24.eu-west-2.compute.internal",
            "private_ip": "10.123.10.24",
            "public_dns": "ec2-3-10-90-22.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.90.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:internet-gateway/igw-0f4515c1d5c1cd739",
            "id": "igw-0f4515c1d5c1cd739",
            "owner_id": "736750855543",
            "tags": {
              "environment": "dev",
              "managedby": "terraform",
              "owner": "Yogendra Jagadeesh",
              "project": "eks_project"
            },
            "tags_all": {
              "environment": "dev",
              "managedby": "terraform",
              "owner": "Yogendra Jagadeesh",
              "project": "eks_project"
            },
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0240b4817dc5e121d",
            "connectivity_type": "public",
            "id": "nat-00dd1f97306de7429",
            "network_interface_id": "eni-0ffb5e90bdb31a398",
            "private_ip": "10.123.10.24",
            "public_ip": "3.10.90.22",
            "subnet_id": "subnet-057a70a888b32237b"
          },
          "dependencies": [
            "module.networking.aws_eip.eks_nat_eip",
            "module.networking.aws_subnet.eks_public_subnets",
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078605a0faf75d1051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00dd1f97306de7429",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078605a0faf75d105",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.eks_ngw",
            "module.networking.aws_route_table.eks_private_rt"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f4515c1d5c1cd739",
            "id": "r-rtb-0176c5bf640207fcb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0176c5bf640207fcb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.eks_internet_gateway",
            "module.networking.aws_route_table.eks_public_rt",
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:route-table/rtb-078605a0faf75d105",
            "id": "rtb-078605a0faf75d105",
            "owner_id": "736750855543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00dd1f97306de7429",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managedby": "terraform",
              "owner": "Yogendra Jagadeesh",
              "project": "eks_project"
            },
            "tags_all": {
              "environment": "dev",
              "managedby": "terraform",
              "owner": "Yogendra Jagadeesh",
              "project": "eks_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:route-table/rtb-0176c5bf640207fcb",
            "id": "rtb-0176c5bf640207fcb",
            "owner_id": "736750855543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4515c1d5c1cd739",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managedby": "terraform",
              "owner": "Yogendra Jagadeesh",
              "project": "eks_project"
            },
            "tags_all": {
              "environment": "dev",
              "managedby": "terraform",
              "owner": "Yogendra Jagadeesh",
              "project": "eks_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f2db3dfd0f29be1",
            "route_table_id": "rtb-078605a0faf75d105",
            "subnet_id": "subnet-0bdcd5dde0777295b"
          },
          "dependencies": [
            "module.networking.aws_route_table.eks_private_rt",
            "module.networking.aws_subnet.eks_private_subnets",
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06af91851b5d7ccbd",
            "route_table_id": "rtb-078605a0faf75d105",
            "subnet_id": "subnet-04318dfa78fcf912c"
          },
          "dependencies": [
            "module.networking.aws_route_table.eks_private_rt",
            "module.networking.aws_subnet.eks_private_subnets",
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091faf75256af9795",
            "route_table_id": "rtb-0176c5bf640207fcb",
            "subnet_id": "subnet-057a70a888b32237b"
          },
          "dependencies": [
            "module.networking.aws_route_table.eks_public_rt",
            "module.networking.aws_subnet.eks_public_subnets",
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0763db4ca1c5fff35",
            "route_table_id": "rtb-0176c5bf640207fcb",
            "subnet_id": "subnet-0726fdc30fa14d322"
          },
          "dependencies": [
            "module.networking.aws_route_table.eks_public_rt",
            "module.networking.aws_subnet.eks_public_subnets",
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-0bdcd5dde0777295b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdcd5dde0777295b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_private_1",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_private_1",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-04318dfa78fcf912c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04318dfa78fcf912c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_private_2",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_private_2",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-057a70a888b32237b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057a70a888b32237b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_public_1",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_public_1",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:subnet/subnet-0726fdc30fa14d322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726fdc30fa14d322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "736750855543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_public_2",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_public_2",
              "kubernetes.io/cluster/eks-public-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0968c9536e01ecc25"
          },
          "dependencies": [
            "module.networking.aws_vpc.eks_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:736750855543:vpc/vpc-0968c9536e01ecc25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-06cc6119de393ab15",
            "default_route_table_id": "rtb-08eeea580c804cb2a",
            "default_security_group_id": "sg-0001cf5aafd5a160c",
            "dhcp_options_id": "dopt-4562542d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0968c9536e01ecc25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08eeea580c804cb2a",
            "owner_id": "736750855543",
            "tags": {
              "Name": "eks_vpc"
            },
            "tags_all": {
              "Name": "eks_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}